--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -21,7 +20,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body class="page-background">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
@@ -39,5 +38,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+  </body>  
 </html>
